Prepare for tests with Jetty.